# GerenXchange

./: ChangeLog.md  LICENSE  README.md  configure.ac
debian/: .gitignore  README.Debian  changelog  config  control  copyright  postinst  postrm  rules  templates
doc/: TODO.md
man/: GerenXchange.8  Makefile.am
src/: .gitignore  GerenXchange.c  GerenXchange.h  Makefile.am  common.c  ftpcmd.c  log.c  tftpcmd.c
test/: lib.sh  maxfiles.sh
